[package]
name = "espclient"
version = "1.0.3"
authors = ["Carlos A. Rueda <carueda@mbari.org>"]
edition = "2021"

[dependencies]
bytes = "1.2.1"

anstyle = "1.0.1" # for coloring clap help
clap = { version = "4.3.10", features = ["derive", "unstable-styles"] }

colored = "2.0.4"
rustyline = "10.1.1"
